# eyes

./: .gitignore  README.md  pyproject.toml
eyes/: main.py
eyes/core/: agent.py  utils.py
