[project]
name = "eyes"
version = "0.1.0"
dependencies = [
    "aiohappyeyeballs>=2.4.4",
    "aiohttp>=3.11.11",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "anthropic>=0.44.0",
    "anyio>=4.8.0",
    "argparse>=1.4.0",
    "asttokens>=3.0.0",
    "attrs>=24.3.0",
    "babel>=2.16.0",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.36.3",
    "botocore>=1.36.3",
    "browser-use>=0.1.26",
    "cachetools>=5.5.1",
    "certifi>=2024.12.14",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "comm>=0.2.2",
    "courlan>=1.3.2",
    "dateparser>=1.2.0",
    "debugpy>=1.8.12",
    "decorator>=5.1.1",
    "defusedxml>=0.7.1",
    "deprecated>=1.2.15",
    "distro>=1.9.0",
    "executing>=2.1.0",
    "filetype>=1.2.0",
    "fireworks-ai>=0.15.12",
    "frozenlist>=1.5.0",
    "google-ai-generativelanguage>=0.6.15",
    "google-api-core>=2.24.0",
    "google-api-python-client>=2.159.0",
    "google-auth>=2.37.0",
    "google-auth-httplib2>=0.2.0",
    "google-generativeai>=0.8.4",
    "googleapis-common-protos>=1.66.0",
    "greenlet>=3.1.1",
    "grpcio>=1.67.1",
    "grpcio-status>=1.67.1",
    "gtts>=2.5.4",
    "h11>=0.14.0",
    "html2text>=2024.2.26",
    "htmldate>=1.9.3",
    "httpcore>=1.0.7",
    "httplib2>=0.22.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "httpx-ws>=0.7.1",
    "idna>=3.10",
    "importlib-metadata>=8.5.0",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "jedi>=0.19.2",
    "jiter>=0.8.2",
    "jmespath>=1.0.1",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.7.2",
    "justext>=3.0.1",
    "langchain>=0.3.14",
    "langchain-anthropic>=0.3.3",
    "langchain-aws>=0.2.11",
    "langchain-core>=0.3.31",
    "langchain-fireworks>=0.2.6",
    "langchain-google-genai>=2.0.8",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.3.1",
    "langchain-text-splitters>=0.3.5",
    "langsmith>=0.2.11",
    "lmnr>=0.4.55",
    "lxml>=5.3.0",
    "lxml-html-clean>=0.4.1",
    "maincontentextractor>=0.0.4",
    "matplotlib-inline>=0.1.7",
    "monotonic>=1.6",
    "multidict>=6.1.0",
    "nest-asyncio>=1.6.0",
    "numpy>=1.26.4",
    "ollama>=0.4.7",
    "openai>=1.59.9",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-exporter-otlp-proto-common>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "opentelemetry-instrumentation>=0.50b0",
    "opentelemetry-instrumentation-langchain>=0.36.1",
    "opentelemetry-instrumentation-requests>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-threading>=0.50b0",
    "opentelemetry-instrumentation-urllib3>=0.50b0",
    "opentelemetry-proto>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-semantic-conventions>=0.50b0",
    "opentelemetry-semantic-conventions-ai>=0.4.2",
    "opentelemetry-util-http>=0.50b0",
    "orjson>=3.10.15",
    "packaging>=24.2",
    "parso>=0.8.4",
    "pillow>=11.1.0",
    "platformdirs>=4.3.6",
    "playwright>=1.49.1",
    "posthog>=3.9.0",
    "prompt-toolkit>=3.0.50",
    "propcache>=0.2.1",
    "proto-plus>=1.25.0",
    "protobuf>=5.29.3",
    "psutil>=6.1.1",
    "pure-eval>=0.2.3",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.1",
    "pyaudio>=0.2.14",
    "pydantic>=2.10.5",
    "pydantic-core>=2.27.2",
    "pyee>=12.0.0",
    "pygame>=2.6.1",
    "pygments>=2.19.1",
    "pyparsing>=3.2.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "pywin32>=308",
    "pyyaml>=6.0.2",
    "pyzmq>=26.2.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "rsa>=4.9",
    "s3transfer>=0.11.1",
    "setuptools>=75.8.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.6",
    "speechrecognition>=3.14.0",
    "sqlalchemy>=2.0.37",
    "stack-data>=0.6.3",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "tld>=0.13",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "traitlets>=5.14.3",
    "typing-extensions>=4.12.2",
    "tzdata>=2025.1",
    "tzlocal>=5.2",
    "uritemplate>=4.1.1",
    "urllib3>=2.3.0",
    "wcwidth>=0.2.13",
    "wrapt>=1.17.2",
    "wsproto>=1.2.0",
    "yarl>=1.18.3",
    "zipp>=3.21.0",
] 

[project.scripts]
dev = "eyes.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]